--- a/index.html
+++ b/index.html
@@ -89,7 +89,6 @@
       <span class="setup-close">&times;</span>
     </div>
 
-
     <div class="setup-artifacts-shop">
       <div class="setup-artifacts-cell"><img src="img/icon-star.png" alt="Star" width="65" height="50" draggable="true">
       </div>
@@ -159,7 +158,6 @@
     </div>
   </form>
 </div>
-
 <footer>
   <p><a href="http://htmlacademy.ru" class="footer-link"><img src="img/htmlacademy-logo.png" alt="HTML Academy"
                                                               width="130">Сделано в HTML Academy</a>в 2017 году</p>
@@ -203,6 +201,7 @@
   };
 
 </script>
+<script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
 </body>
