--- a/index.html
+++ b/index.html
@@ -63,15 +63,16 @@
   <div class="demo"></div>
 
   <div class="setup-open">
-    <img src="./img/user-1.jpg" class="setup-open-icon">
+    <img src="./img/user-1.jpg" class="setup-open-icon" tabindex="0">
   </div>
 </header>
 
 <div class="overlay setup hidden">
-  <form class="setup-wizard-form"
+  <form class="setup-wizard-form hidden"
         method="post"
         enctype="multipart/form-data"
-        autocomplete="off">
+        action="https://js.dump.academy/code-and-magick"
+        autocomplete="off">>
 
     <div class="setup-title">
       <div class="setup-user">
@@ -86,7 +87,7 @@
         </label>
       </div>
 
-      <span class="setup-close">&times;</span>
+      <span class="setup-close" tabindex="0">&times;</span>
     </div>
 
     <div class="setup-artifacts-shop">
