--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         method="post"
         enctype="multipart/form-data"
         action="https://js.dump.academy/code-and-magick"
-        autocomplete="off">>
+        autocomplete="off">
 
     <div class="setup-title">
       <div class="setup-user">
@@ -82,8 +82,9 @@
         </div>
         <label>
           <input type="text" name="username"
-                 maxlength="25" required
-                 class="setup-user-name" value="Синий Пендальф"/>
+                 required
+                 class="setup-user-name" value="Синий Пендальф"/
+                 minlength="2" maxlength="25">
         </label>
       </div>
 
